Implement key vault for storing app registtation secret key

--- a/BlazorAzureAdLogin/appsettings.json
+++ b/BlazorAzureAdLogin/appsettings.json
@@ -17,5 +17,6 @@
   "DownstreamApi": {
     "BaseUrl": "https://graph.microsoft.com/v1.0/me",
     "Scopes": [ "user.read" ]
-  }
+  },
+  "KeyVaultName": "seedfinupload-dev-kv"
 }
