--- a/BlazorKeyVaultDemo/appsettings.json
+++ b/BlazorKeyVaultDemo/appsettings.json
@@ -6,5 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "DownstreamApi": {
+    "BaseUrl": "https://graph.microsoft.com/v1.0/me",
+    "Scopes": [ "user.read" ]
+  },
   "KeyVaultName": "demokevault-karuna"
 }
