Implement azuure AD login for web assembly project

--- a/BlazorWasmAppAzureAdLogin/wwwroot/appsettings.json
+++ b/BlazorWasmAppAzureAdLogin/wwwroot/appsettings.json
@@ -5,8 +5,9 @@
   For more info see https://aka.ms/dotnet-template-ms-identity-platform 
   */
   "AzureAd": {
-    "Authority": "https://login.microsoftonline.com/22222222-2222-2222-2222-222222222222",
-    "ClientId": "33333333-3333-3333-33333333333333333",
-    "ValidateAuthority": true
+    "Authority": "https://login.microsoftonline.com/3e20ecb2-9cb0-4df1-ad7b-914e31dcdda4",
+    "ClientId": "",
+    "ValidateAuthority": true,
+    "DefaultScopes": [ "api://55fc27de-e189-46d9-847c-cc078e044881/access_as_user" ]
   }
 }
