Implement Webassembly and APi integration

--- a/BlazorWasmAppAzureAdLogin.API/appsettings.json
+++ b/BlazorWasmAppAzureAdLogin.API/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "TenantId": "",
+    "ClientId": "",
+    "Audience": "api://55fc27de-e189-46d9-847c-cc078e044881"
+  }
 }
