--- a/BlazorWasmAppAzureAdLogin.API/appsettings.json
+++ b/BlazorWasmAppAzureAdLogin.API/appsettings.json
@@ -10,6 +10,6 @@
     "Instance": "https://login.microsoftonline.com/",
     "TenantId": "",
     "ClientId": "",
-    "Audience": "api://55fc27de-e189-46d9-847c-cc078e044881"
+    "Audience": ""
   }
 }
