--- a/BlazorWasmAppAzureAdLogin/wwwroot/appsettings.json
+++ b/BlazorWasmAppAzureAdLogin/wwwroot/appsettings.json
@@ -6,8 +6,10 @@
   */
   "AzureAd": {
     "Authority": "https://login.microsoftonline.com/3e20ecb2-9cb0-4df1-ad7b-914e31dcdda4",
-    "ClientId": "01ad2845-680f-4c1b-929e-53811c79f27d",
+    "ClientId": "",
     "ValidateAuthority": true,
-    "DefaultScopes": [ "api://55fc27de-e189-46d9-847c-cc078e044881/access_as_user" ]
+    "DefaultScopes": [ "" ],
+    "RedirectUri": "https://localhost:7166/authentication/login-callback",
+    "PostLogoutRedirectUri": "https://localhost:7166/"
   }
 }
