Implement AD Login redirect

--- a/BlazorAzureAdLogin/appsettings.json
+++ b/BlazorAzureAdLogin/appsettings.json
@@ -8,10 +8,13 @@
   "AllowedHosts": "*",
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
-    //"Domain": "",
-    //"TenantId": "",
-    //"ClientId": "",
-    //"ClientSecret": "",
+    "Domain": "agcompany.onmicrosoft.com",
+    "TenantId": "3e20ecb2-9cb0-4df1-ad7b-914e31dcdda4",
+    "ClientId": "01ad2845----53811c79f27d",
+    "ClientCertificates": [
+    ],
+    // the following is required to handle Continuous Access Evaluation challenges
+    "ClientCapabilities": [ "cp1" ],
     "CallbackPath": "/signin-oidc"
   },
   "DownstreamApi": {
