--- a/BlazorWasmClient.Api/appsettings.json
+++ b/BlazorWasmClient.Api/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
-    "TenantId": "",
+    "TenantId": "3e20ecb2-9cb0-4df1-ad7b-914e31dcdda4",
     "ClientId": "",
     "Audience": "api://<API-client id>"
   }
