--- a/BlazorWasmClient/wwwroot/appsettings.json
+++ b/BlazorWasmClient/wwwroot/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AzureAd": {
     "Authority": "https://login.microsoftonline.com/3e20ecb2-9cb0-4df1-ad7b-914e31dcdda4",
-    "ClientId": "",
+    "ClientId": "01ad2845-680f-4c1b-929e-53811c79f27d",
     "ValidateAuthority": true
   }
 }
